--- a/kustomize/postgres/lb.yaml
+++ b/kustomize/postgres/lb.yaml
@@ -17,4 +17,4 @@ spec:
       protocol: TCP
       port: 5432
       targetPort: 5432
-  externalTrafficPolicy: Local
+  externalTrafficPolicy: Cluster
